--- a/package.json
+++ b/package.json
@@ -3,25 +3,42 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev:next": "next dev --turbopack",
+    "dev:socket": "SOCKET_PORT=3002 node server/index.js",
+    "dev": "concurrently \"npm:dev:socket\" \"npm:dev:next\"",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "deploy": "./scripts/deploy.sh",
+    "deploy:quick": "./scripts/deploy.sh",
+    "deploy:socket": "cd socket-deploy && railway up",
+    "deploy:frontend": "vercel --prod",
+    "prepare:production": "cp env.production.template .env.production.local"
   },
   "dependencies": {
+    "concurrently": "^9.2.1",
+    "lucide-react": "^0.543.0",
+    "motion": "^12.23.12",
+    "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.2"
+    "socket.io-client": "^4.8.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "cors": "^2.8.5",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
-    "@eslint/eslintrc": "^3"
+    "express": "^5.1.0",
+    "socket.io": "^4.8.1",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
